methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:0: error: class PictureMono1 needs to be abstract, since method seMettre is not defined
class PictureMono1 extends SimpleBuggle {
      ^